--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- google fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Permanent+Marker&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- fontawesome -->
+    <script
+      src="https://kit.fontawesome.com/cef74bc469.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>eShopping</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
